# home-api

./: Cargo.toml  README.md  config.example.toml
server/: Cargo.toml
server/src/: config.rs  main.rs  shark_endpoint.rs  sonos_endpoint.rs
shark/: Cargo.toml
shark/src/: ayla.rs  error.rs  lib.rs  models.rs  region.rs
smf/: homeapi.xml
src/: main.rs  sonos.rs
