[package]
name = "shark"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
openssl = "0.10"
serde_json = "1.0.72"
serde_repr = "0.1.7"
schemars = "0.8.8"

[dependencies.serde]
version = "1.0.123"
features = [ "derive" ]

[dependencies.reqwest]
version = "0.11.1"
features = [ "blocking", "json" ]
